--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,18 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    center =[]\n",
+    "\n",
+    "    for d in len(points[0]):\n",
+    "        avg=0\n",
+    "        for point in points:\n",
+    "            avg+=point[d]\n",
+    "        avg=avg/len(points)\n",
+    "        center+=avg\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return center\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,6 +86,7 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
+    "    \n",
     "    return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def assign_points(data_points, centers):\n",
@@ -530,7 +542,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "10df00eab5bc80f37f746cca795c9dcf2d7c48f48a2563dba879eda8affef9de"
    }
   }
  },
