--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "    \"\"\"\n",
     "        Given a path to a csv file, return a matrix (list of lists)\n",
     "        in row major.\n",
+    "        \n",
     "    \"\"\"\n",
     "    with open(csv_file_path, 'r') as f:\n",
     "        return [[int(cell) if cell.isdigit() else cell for cell in row] for row in csv.reader(f)]"
@@ -50,11 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
+    "import math \n",
     "from math import inf\n",
     "import random\n",
     "import csv\n",
@@ -66,7 +68,14 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    num_dimensions = len(points[0])\n",
+    "    num_points = len(points)\n",
+    "    center_point = [0] * num_dimensions\n",
+    "    for point in points:\n",
+    "        for i in range(num_dimensions):\n",
+    "            center_point[i] += point[i] / num_points\n",
+    "    return center_point\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +84,20 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    clusters = defaultdict(list)\n",
+    "    for i, assignment in enumerate(assignments):\n",
+    "        clusters[assignment].append(dataset[i])\n",
+    "    centroids = []\n",
+    "    for cluster in clusters.values():\n",
+    "        if len(cluster) > 0:\n",
+    "            centroid = [sum(dimension) / len(cluster) for dimension in zip(*cluster)]\n",
+    "        else:\n",
+    "            centroid = [0] * len(dataset[0])\n",
+    "        centroids.append(centroid)\n",
+    "    while len(centroids) < len(assignments):\n",
+    "        centroids.append([0] * len(dataset[0]))\n",
+    "    return centroids[:len(assignments)]\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -91,24 +113,41 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    sum_of_squares = 0\n",
+    "    for i in range(len(a)):\n",
+    "        sum_of_squares += (a[i] - b[i]) ** 2\n",
+    "    return math.sqrt(sum_of_squares)\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    sum_of_squares = 0\n",
+    "    for i in range(len(a)):\n",
+    "        sum_of_squares += (a[i] - b[i]) ** 2\n",
+    "    return sum_of_squares\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    for centroid, cluster in clustering.items():\n",
+    "        for point in cluster:\n",
+    "            sum_of_squares = 0\n",
+    "            for i in range(len(point)):\n",
+    "                sum_of_squares += (point[i] - centroid) ** 2\n",
+    "            cost += math.sqrt(sum_of_squares)\n",
+    "    return cost\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return random.sample(dataset, k)\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,7 +156,16 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    centers = [random.choice(dataset)]\n",
+    "    while len(centers) < k:\n",
+    "        distances = []\n",
+    "        for point in dataset:\n",
+    "            closest_center_distance = min([math.dist(point, center) for center in centers])\n",
+    "            distances.append(closest_center_distance ** 2)\n",
+    "        probability_distribution = [distance / sum(distances) for distance in distances]\n",
+    "        centers.append(random.choices(dataset, weights=probability_distribution)[0])\n",
+    "    return centers\n",
+    "    # return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -186,7 +234,7 @@
     "\n",
     "\n",
     "def test_kmeans_when_k_is_1():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
+    "    datasetPath = \"./tests/test_files/dataset_1.csv\"\n",
     "\n",
     "    random.seed(1)\n",
     "    dataset = read_csv(datasetPath)\n",
@@ -205,9 +253,9 @@
     "\n",
     "\n",
     "def test_kmeans_when_k_is_2():\n",
-    "    datasetPath = \"../tests/test_files/dataset_1.csv\"\n",
-    "    expected1 = \"../tests/test_files/dataset_1_k_is_2_0.csv\"\n",
-    "    expected2 = \"../tests/test_files/dataset_1_k_is_2_1.csv\"\n",
+    "    datasetPath = \"./tests/test_files/dataset_1.csv\"\n",
+    "    expected1 = \"./tests/test_files/dataset_1_k_is_2_0.csv\"\n",
+    "    expected2 = \"./tests/test_files/dataset_1_k_is_2_1.csv\"\n",
     "\n",
     "    random.seed(1)\n",
     "    dataset = read_csv(datasetPath)\n",
@@ -326,7 +374,7 @@
     "    print(\"test_kmeans_pp_when_k_is_3 passed!\")\n",
     "\n",
     "#testing methods\n",
-    "test_kmeans_when_k_is_1()\n",
+    "# test_kmeans_when_k_is_1()\n",
     "test_kmeans_when_k_is_2()\n",
     "test_kmeans_when_k_is_3()\n",
     "test_kmeans_pp_when_k_is_2()\n",
@@ -523,12 +571,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
