--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +63,16 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "#     print(\"points\",points)\n",
+    "    centroid = [0]*len(points[0])\n",
+    "    dim_len = len(points[0])\n",
+    "    for index_1 in range(len(points)):\n",
+    "        for dim in range(dim_len):\n",
+    "            centroid[dim]+=points[index_1][dim]\n",
+    "    total = len(points)\n",
+    "    centroid = [val/total for val in centroid]\n",
+    "        \n",
+    "    return centroid\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +81,15 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    \n",
+    "    assignment_dict = {}\n",
+    "    for index in range(len(dataset)):\n",
+    "        if assignments[index] in assignment_dict:\n",
+    "            assignment_dict[assignments[index]].append(dataset[index])\n",
+    "        else:\n",
+    "            assignment_dict.update({assignments[index]:[dataset[index]]})\n",
+    "    k_centroids = [get_centroid(val) for key,val in assignment_dict.items()]\n",
+    "    return k_centroids\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -84,6 +98,7 @@
     "    \"\"\"\n",
     "    #NOTE: i did this method for u guys so you can see an example of how \n",
     "    #these variables are used. You can change it if you want.\n",
+    "\n",
     "    return [min(range(len(centers)), key=lambda i: distance(point, centers[i])) for point in data_points]\n",
     "\n",
     "\n",
@@ -91,24 +106,45 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    if len(a)!= len(b):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "\n",
+    "    sum_ = 0\n",
+    "    for i in range(len(a)):\n",
+    "        sum_+= (a[i] - b[i])**2\n",
+    "    return sum_**(0.5)\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    if len(a)!= len(b):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "    if a==b:\n",
+    "        return 0\n",
+    "    sum_ = 0\n",
+    "    for i in range(len(a)):\n",
+    "         sum_+= (a[i] - b[i])**2\n",
+    "    return sum_ # EUCLIDEAN'S DISTANCE WITHOUT SQUARE ROOT\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "#     print(\"CLUSTERING--> \", clustering)\n",
+    "    cost = 0\n",
+    "    for key_,val_ in clustering.items():\n",
+    "        centroid = get_centroid(val_)\n",
+    "        for i in val_:\n",
+    "            cost+=distance_squared(i,centroid)\n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    rand_int_list = [random.randint(0, len(dataset)-1)for i in range(k)]\n",
+    "    \n",
+    "    return [dataset[i] for i in rand_int_list]\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,10 +153,21 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    picked_pts = []\n",
+    "    for i in range(k):\n",
+    "        if i==0:\n",
+    "            index = random.randint(0,k)\n",
+    "            picked_pts.append(dataset[index])\n",
+    "        else:\n",
+    "            distance_list = [distance_squared(picked_pts[-1],pt) for pt in dataset]\n",
+    "            max_distance_val = max(distance_list)\n",
+    "            max_val_index = distance_list.index(max_distance_val)\n",
+    "            picked_pts.append(dataset[max_val_index])\n",
+    "    return picked_pts\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
+    "#     print(\"---->\", assignments)\n",
     "    old_assignments = None\n",
     "    while assignments != old_assignments:\n",
     "        new_centers = get_centroids(dataset, assignments)\n",
@@ -137,6 +184,7 @@
     "        raise ValueError(\"lengths must be in [1, len(dataset)]\")\n",
     "    \n",
     "    k_points = generate_k(dataset, k)\n",
+    "#     print(\"kpoints -> \", k_points)\n",
     "    return _do_lloyds_algo(dataset, k_points)\n",
     "\n",
     "\n",
@@ -149,7 +197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,7 +204,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,9 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -336,7 +394,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,7 +401,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,7 +413,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -366,25 +421,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x)!= len(y):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "    if x==y:\n",
+    "        return 0\n",
+    "    sum = 0\n",
+    "    for i in range(len(x)):\n",
+    "        sum+=(x[i]-y[i])**2\n",
+    "    return sum**(0.5)\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x)!= len(y):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "    if x==y:\n",
+    "        return 0\n",
+    "    sum = 0\n",
+    "    for i in range(len(x)):\n",
+    "        sum+=x[i]+y[i]\n",
+    "    return sum\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x)!= len(y):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "    if x==y:\n",
+    "        return 0\n",
+    "    intersection_value = set(x).intersection(set(y))\n",
+    "    union_value = set(x).union(set(y))\n",
+    "    dist = 1- (len(intersection_value)/len(union_value))\n",
+    "    \n",
+    "    return dist\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    if len(x)!= len(y):\n",
+    "        return \"Dimension mismatch error\"\n",
+    "    if x==y:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,9 +476,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -511,7 +603,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +619,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
