--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '】' (U+3011) (2843276491.py, line 31)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 31\u001b[0;36m\u001b[0m\n\u001b[0;31m    return [min(range(len(centers)), key=lambda 】‘i: distance(point, centers[i])) for point in data_points]\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '】' (U+3011)\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from math import inf\n",
@@ -153,22 +162,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### testing `kmeans`"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Run the methods provided to see if your `kmeans` works"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NotImplementedError' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 159\u001b[0m\n\u001b[1;32m    156\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mtest_kmeans_pp_when_k_is_3 passed!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    158\u001b[0m \u001b[39m#testing methods\u001b[39;00m\n\u001b[0;32m--> 159\u001b[0m test_kmeans_when_k_is_1()\n\u001b[1;32m    160\u001b[0m test_kmeans_when_k_is_2()\n\u001b[1;32m    161\u001b[0m test_kmeans_when_k_is_3()\n",
+      "Cell \u001b[0;32mIn[3], line 23\u001b[0m, in \u001b[0;36mtest_kmeans_when_k_is_1\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m dataset \u001b[39m=\u001b[39m read_csv(datasetPath)\n\u001b[1;32m     22\u001b[0m expected_clustering \u001b[39m=\u001b[39m dataset\n\u001b[0;32m---> 23\u001b[0m clustering \u001b[39m=\u001b[39m k_means(dataset\u001b[39m=\u001b[39;49mdataset, k\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m     25\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(clustering\u001b[39m.\u001b[39mkeys()) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     26\u001b[0m \u001b[39massert\u001b[39;00m clustered_all_points(clustering, dataset) \u001b[39mis\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[2], line 84\u001b[0m, in \u001b[0;36mk_means\u001b[0;34m(dataset, k)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mlengths must be in [1, len(dataset)]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     83\u001b[0m k_points \u001b[39m=\u001b[39m generate_k(dataset, k)\n\u001b[0;32m---> 84\u001b[0m \u001b[39mreturn\u001b[39;00m _do_lloyds_algo(dataset, k_points)\n",
+      "Cell \u001b[0;32mIn[2], line 67\u001b[0m, in \u001b[0;36m_do_lloyds_algo\u001b[0;34m(dataset, k_points)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_do_lloyds_algo\u001b[39m(dataset, k_points):\n\u001b[0;32m---> 67\u001b[0m     assignments \u001b[39m=\u001b[39m assign_points(dataset, k_points)\n\u001b[1;32m     68\u001b[0m     old_assignments \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[39mwhile\u001b[39;00m assignments \u001b[39m!=\u001b[39m old_assignments:\n",
+      "Cell \u001b[0;32mIn[2], line 31\u001b[0m, in \u001b[0;36massign_points\u001b[0;34m(data_points, centers)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[39mThis method assigns each point in data_points to the closest center\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[39mand returns a list of assignments.\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[39m#NOTE: i did this method for u guys so you can see an example of how \u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[39m#these variables are used. You can change it if you want.\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m \u001b[39mreturn\u001b[39;00m [\u001b[39mmin\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(centers)), key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m i: distance(point, centers[i])) \u001b[39mfor\u001b[39;00m point \u001b[39min\u001b[39;00m data_points]\n",
+      "Cell \u001b[0;32mIn[2], line 31\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[39mThis method assigns each point in data_points to the closest center\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[39mand returns a list of assignments.\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[39m#NOTE: i did this method for u guys so you can see an example of how \u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[39m#these variables are used. You can change it if you want.\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m \u001b[39mreturn\u001b[39;00m [\u001b[39mmin\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39;49m(centers)), key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m i: distance(point, centers[i])) \u001b[39mfor\u001b[39;00m point \u001b[39min\u001b[39;00m data_points]\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NotImplementedError' has no len()"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -525,12 +543,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
