--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +55,7 @@
     "from math import inf\n",
     "import random\n",
     "import csv\n",
+    "import numpy as np\n",
     "\n",
     "def get_centroid(points):\n",
     "    \"\"\"\n",
@@ -66,7 +64,9 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    points = np.array(points)\n",
+    "    centroid = np.sum(points,axis = 0)/points.shape[0]\n",
+    "    return centroid\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +75,16 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    clusters_num = np.unique(assignments).shape[0]\n",
+    "    clusters = np.array(dataset)\n",
+    "    clusters = clusters[np.argsort(assignments)]\n",
+    "    centroids = []\n",
+    "    for i in range(0,clusters_num):\n",
+    "        num = assignments.count(i)\n",
+    "        centroid = sum(clusters[:num])/num\n",
+    "        centroids.append(centroid)\n",
+    "        clusters = np.delete(clusters,range(num),axis = 0)\n",
+    "    return centroids\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -91,24 +100,37 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    return np.linalg.norm(a-b)\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    a = np.array(a)\n",
+    "    b = np.array(b)\n",
+    "    return sum(np.square(a-b))\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    distance_sum = 0\n",
+    "    num = 0\n",
+    "    for i in clustering.keys():\n",
+    "        centroid = get_centroid(clustering[i])\n",
+    "        for point in clustering[i]:\n",
+    "            num += 1\n",
+    "            distance_sum += distance_squared(point,centroid)\n",
+    "    cost = distance_sum / num\n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    points = random.sample(dataset,k)\n",
+    "    return points\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,7 +139,16 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    centroids = [random.choice(dataset)]\n",
+    "    \n",
+    "    for i in range(k-1):\n",
+    "        distances = []\n",
+    "        for point in dataset:\n",
+    "            distance = min([distance_squared(point,centroid) for centroid in centroids])\n",
+    "            distances.append(distance)\n",
+    "        probability_distribution = [distance / sum(distances) for distance in distances]\n",
+    "        centroids.append(random.choices(dataset, weights=probability_distribution,k = 1)[0])\n",
+    "    return centroids\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -149,7 +180,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,7 +187,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,9 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -283,10 +324,11 @@
     "    for _ in range(10):\n",
     "        new_clustering = k_means_pp(dataset=dataset, k=2)\n",
     "        new_cost = cost_function(clustering)\n",
+    "\n",
     "        if new_cost < cost:\n",
     "            clustering = new_clustering\n",
     "            cost = new_cost\n",
-    "\n",
+    "    \n",
     "\n",
     "    assert len(clustering.keys()) == 2\n",
     "    assert clustered_all_points(clustering, dataset) is True\n",
@@ -336,7 +378,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,7 +385,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,7 +397,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -366,25 +405,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    return np.linalg.norm(x-y)\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    return np.sum(np.absolute(x-y))\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x) == 0 and len(y) == 0:\n",
+    "        raise ValueError(\"lengths must not be zero\")\n",
+    "    up = 0\n",
+    "    down = 0\n",
+    "    combine = set(x+y)\n",
+    "    for i in combine:\n",
+    "        down += 1\n",
+    "        if i in x and i in y:\n",
+    "            up += 1\n",
+    "    return 1 - (up/down)\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise ValueError(\"lengths must not be zero\")\n",
+    "    up = np.dot(x,y)\n",
+    "    down = np.linalg.norm(x) * np.linalg.norm(y)\n",
+    "    return up/down"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,9 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -511,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -525,9 +593,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
