--- a/worksheets/temp.ipynb
+++ b/worksheets/temp.ipynb
@@ -1,27 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Worksheet 06\n",
-    "\n",
-    "Name:  Youheng Yang\\\n",
-    "UID:  U45006780\n",
-    "\n",
-    "### Topics\n",
-    "\n",
-    "- Density-Based Clustering\n",
-    "\n",
-    "### Density-Based Clustering\n",
-    "\n",
-    "Follow along with the live coding of the DBScan algorithm."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +40,13 @@
     "class DBC():\n",
     "\n",
     "    def __init__(self, dataset, min_pts, epsilon):\n",
+    "        #TODO: make a dictionary of all the neighborhoods upfront\n",
     "        self.dataset = dataset\n",
     "        self.min_pts = min_pts\n",
     "        self.epsilon = epsilon\n",
     "        self.assignments = [0 for _ in range(len(self.dataset))]\n",
     "\n",
-    "\n",
+    "    # TODO: point itself should not be counted\n",
     "    def is_core(self, i):\n",
     "        neighbors = []\n",
     "        for j in range(len(self.dataset)):\n",
@@ -72,27 +54,34 @@
     "                neighbors.append(j)\n",
     "        return len(neighbors) >= self.min_pts\n",
     "    \n",
-    "    def get_neighborhood(self, i):\n",
+    "    \n",
+    "    def get_unlabeled_neighbors(self, i):\n",
     "        neighbors = []\n",
     "        for j in range(len(self.dataset)):\n",
     "            if i != j and self.assignments[j] == 0 and np.linalg.norm(self.dataset[i] - self.dataset[j]) <= self.epsilon:\n",
     "                neighbors.append(j)\n",
-    "            \n",
+    "                \n",
     "        return neighbors\n",
+    "    \n",
     "\n",
     "    def dfs_assign(self, i, cluster_num):\n",
     "        self.assignments[i] = cluster_num\n",
-    "        neighbors = self.get_neighborhood(i)\n",
+    "        neighbors = self.get_unlabeled_neighbors(i) # this should return a list of indexes\n",
+    "        \n",
     "        while neighbors:\n",
     "            next_candidate = neighbors.pop()\n",
-    "\n",
+    "            \n",
     "            if self.assignments[next_candidate] != 0:\n",
+    "                # if we hit this if statement, something is wrong\n",
+    "                # print('help')\n",
     "                continue\n",
-    "                \n",
+    "            \n",
     "            self.assignments[next_candidate] = cluster_num\n",
     "            if self.is_core(next_candidate):\n",
-    "                neighbors += self.get_neighborhood(next_candidate)\n",
+    "                neighbors += self.get_unlabeled_neighbors(next_candidate)  \n",
+    "                \n",
     "        return\n",
+    "\n",
     "\n",
     "    def dbscan(self):\n",
     "        \"\"\"\n",
@@ -100,16 +89,18 @@
     "        assignment should match the index of the data point\n",
     "        in the dataset.\n",
     "        \"\"\"\n",
-    "\n",
+    "        assignments = [0 for _ in range(len(self.dataset))]\n",
     "        cluster_num = 1\n",
     "        for i in range(len(self.dataset)):\n",
     "            if self.assignments[i] != 0:\n",
+    "                # already assigned to a cluster - no need to re-evaluate\n",
     "                continue\n",
     "            if self.is_core(i):\n",
     "                self.dfs_assign(i, cluster_num)\n",
-    "            \n",
+    "                \n",
     "            cluster_num += 1\n",
     "        return self.assignments\n",
+    "\n",
     "\n",
     "clustering = DBC(X, 3, .2).dbscan()\n",
     "colors = np.array([x for x in 'bgrcmykbgrcmykbgrcmykbgrcmyk'])\n",
